Added KNN classifier. Pickled model file name changed for pipelines

--- a/Census Income Classification.ipynb
+++ b/Census Income Classification.ipynb
@@ -463,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now our problem is we have 81 variables to predict a single one. Many of these variables will have absolutely no impact on the income of our citizens, but will add a lot of useless noise to the regression, and may even make it not converge.\n",
+    "Now our problem is we have 80 variables to predict a single one. Many of these variables will have absolutely no impact on the income of our citizens, but will add a lot of useless noise to the regression, and may even make it not converge.\n",
     "\n",
     "We use a little trick called SelectKBest that will give us the k=30 best features based on a standard statistical score. In this case, we use Pearson's Chi Squared test."
    ]
@@ -642,7 +642,10 @@
     "\n",
     "def persist_classifier(classifier, full_data = False):\n",
     "    prefixes = ['', '_full']\n",
-    "    joblib.dump(classifier, 'models/' + type(classifier).__name__ + prefixes[full_data] + '.pkl')\n",
+    "    classifier_type_name = type(classifier).__name__\n",
+    "    if classifier_type_name == 'Pipeline':\n",
+    "        classifier_type_name = type(classifier.steps[-1][1]).__name__\n",
+    "    joblib.dump(classifier, 'models/' + classifier_type_name + prefixes[full_data] + '.pkl')\n",
     "    joblib.dump(feature_select, 'models/feature_select.pkl')\n",
     "    joblib.dump(list(X.columns), 'models/columns.pkl')"
    ]
@@ -667,6 +670,41 @@
    "metadata": {},
    "source": [
     "# Classic Data Science Classifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-nearest Neighbours Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "from sklearn.exceptions import DataConversionWarning\n",
+    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "estimators = [\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('knn', KNeighborsClassifier()),\n",
+    "]\n",
+    "pipeline = Pipeline(estimators)\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -882,16 +920,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = ModelCheckpoint('models/best_model.hdf5',\n",
-    "                             monitor='val_acc', mode='max', verbose=0, save_best_only=True)\n",
+    "checkpoint = ModelCheckpoint('models/best_model.hdf5', monitor='val_acc',\n",
+    "                             mode='max', verbose=0, save_best_only=True)\n",
     "early_stop = EarlyStopping(monitor='val_acc', patience=15, verbose=1, mode='max',\n",
     "                          restore_best_weights=True)\n",
     "\n",
-    "estimators = []\n",
-    "estimators.append(('scaler', StandardScaler()))\n",
-    "estimators.append(('mlp', KerasClassifier(build_fn=create_model, epochs=100, batch_size=5, \n",
-    "                                          verbose=1, callbacks=[checkpoint, early_stop],\n",
-    "                                          validation_data=(X_test, y_test==\">50K\"))))\n",
+    "estimators = [\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('mlp', KerasClassifier(build_fn=create_model, epochs=100, batch_size=5, verbose=1, \n",
+    "                            callbacks=[checkpoint, early_stop], \n",
+    "                            validation_data=(X_test, y_test==\">50K\"))),\n",
+    "]\n",
     "pipeline = Pipeline(estimators)"
    ]
   },
