Added SVM classifiers, pipelines

--- a/Census Income Classification.ipynb
+++ b/Census Income Classification.ipynb
@@ -508,23 +508,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transform the training and testing datasets, dropping the features deemed less relevant"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_1 = feature_select.transform(X_train)\n",
-    "X_test_1 = feature_select.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Utility Functions"
    ]
   },
@@ -534,7 +517,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, classification_report, roc_auc_score, roc_curve"
+    "import warnings\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, classification_report, roc_auc_score, roc_curve\n",
+    "from sklearn.externals import joblib\n",
+    "from sklearn.exceptions import DataConversionWarning\n",
+    "\n",
+    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)\n",
+    "joblib.dump(list(X.columns), 'models/columns.pkl')"
    ]
   },
   {
@@ -543,8 +534,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_metrics(classifier, full_data = False):\n",
-    "    prediction = classifier.predict(X_test if full_data else X_test_1)\n",
+    "def plot_metrics(classifier):\n",
+    "    prediction = classifier.predict(X_test)\n",
     "    print('Accuracy is: %0.3f' % accuracy_score(y_test, prediction))\n",
     "    print('F1 Score is: %0.3f' % f1_score(y_test, prediction, pos_label=\">50K\"))\n",
     "    print(classification_report(y_test, prediction))\n",
@@ -558,11 +549,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_roc_curve(classifier, full_data = False):\n",
-    "    fpr, tpr, thresholds = roc_curve(y_test, classifier.predict_proba(X_test if full_data else X_test_1)[:,1], pos_label=\">50K\")\n",
+    "def plot_roc_curve(classifier, classifier_name):\n",
+    "    try:\n",
+    "        prob_pos = classifier.predict_proba(X_test)[:,1]\n",
+    "    except:\n",
+    "        prob_pos = classifier.decision_function(X_test)\n",
+    "        prob_pos = (prob_pos - prob_pos.min()) / (prob_pos.max() - prob_pos.min())\n",
+    "        print('Probabilities estimated from decision function!')\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, prob_pos, pos_label=\">50K\")\n",
     "    plt.figure()\n",
-    "    plt.plot(fpr, tpr, label='%s (area = %0.3f)' % (type(classifier).__name__, \n",
-    "                                                    roc_auc_score(y_test, classifier.predict(X_test if full_data else X_test_1)==\">50K\")))\n",
+    "    roc_score = roc_auc_score(y_test, classifier.predict(X_test)==\">50K\")\n",
+    "    plt.plot(fpr, tpr, label='%s (area = %0.3f)' % (classifier_name, roc_score))\n",
     "    plt.plot([0, 1], [0, 1],'r--')\n",
     "    plt.xlim([-0.05, 1.05])\n",
     "    plt.ylim([0.0, 1.05])\n",
@@ -579,9 +576,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''def plot_cap_curve(classifier, full_data = False):\n",
+    "def plot_cap_curve(classifier, classifier_name):\n",
     "    from scipy import integrate\n",
-    "    y_preds_proba = classifier.predict_proba(X_test if full_data else X_test_1)[:,1]\n",
+    "    try:\n",
+    "        prob_pos = classifier.predict_proba(X_test)[:,1]\n",
+    "    except:\n",
+    "        prob_pos = classifier.decision_function(X_test)\n",
+    "        prob_pos = (prob_pos - prob_pos.min()) / (prob_pos.max() - prob_pos.min())\n",
+    "        print('Probabilities estimated from decision function!')\n",
     "    y_values = y_test==\">50K\"\n",
     "    num_pos_obs = np.sum(y_values)\n",
     "    num_count = len(y_values)\n",
@@ -589,7 +591,7 @@
     "    ideal = pd.DataFrame({'x':[0,rate_pos_obs,1],'y':[0,1,1]})\n",
     "    xx = np.arange(num_count) / float(num_count - 1)\n",
     "    \n",
-    "    y_cap = np.c_[y_values,y_preds_proba]\n",
+    "    y_cap = np.c_[y_values,prob_pos]\n",
     "    y_cap_df_s = pd.DataFrame(data=y_cap)\n",
     "    y_cap_df_s = y_cap_df_s.sort_values([1], ascending=False).reset_index(level = y_cap_df_s.index.names, drop=True)\n",
     "    \n",
@@ -618,7 +620,7 @@
     "    \n",
     "    fig, ax = plt.subplots(nrows = 1, ncols = 1)\n",
     "    ax.plot(ideal['x'],ideal['y'], color='dimgrey', label='Perfect Model')\n",
-    "    ax.plot(xx,yy, color='red', label=type(classifier).__name__)\n",
+    "    ax.plot(xx,yy, color='red', label=classifier_name)\n",
     "    ax.plot(xx,xx, color='blue', label='Random Model')\n",
     "    ax.plot([percent, percent], [0.0, val], color='green', linestyle='--', linewidth=1)\n",
     "    ax.plot([0, percent], [val, val], color='green', linestyle='--', linewidth=1, label='%0.3f%% of positive obs at %0.1f%%' % (val*100, percent*100))\n",
@@ -629,7 +631,7 @@
     "    plt.xlabel('% of the data')\n",
     "    plt.ylabel('% of positive obs')\n",
     "    plt.legend()\n",
-    "    plt.show()'''"
+    "    plt.show()"
    ]
   },
   {
@@ -638,30 +640,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.externals import joblib\n",
-    "\n",
-    "def persist_classifier(classifier, full_data = False):\n",
-    "    prefixes = ['', '_full']\n",
-    "    classifier_type_name = type(classifier).__name__\n",
-    "    if classifier_type_name == 'Pipeline':\n",
-    "        classifier_type_name = type(classifier.steps[-1][1]).__name__\n",
-    "    joblib.dump(classifier, 'models/' + classifier_type_name + prefixes[full_data] + '.pkl')\n",
-    "    joblib.dump(feature_select, 'models/feature_select.pkl')\n",
-    "    joblib.dump(list(X.columns), 'models/columns.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def classify_and_plot(classifier, full_data = False):\n",
-    "    classifier.fit(X_train if full_data else X_train_1, y_train)\n",
-    "    plot_metrics(classifier, full_data)\n",
-    "    plot_roc_curve(classifier, full_data)\n",
-    "    #plot_cap_curve(classifier, full_data)\n",
-    "    persist_classifier(classifier, full_data)\n",
+    "def classify_and_plot(classifier):\n",
+    "    classifier_name = type(classifier).__name__\n",
+    "    if classifier_name == 'Pipeline':\n",
+    "        classifier_name = classifier.steps[-1][0]\n",
+    "    classifier.fit(X_train, y_train)\n",
+    "    plot_metrics(classifier)\n",
+    "    plot_roc_curve(classifier, classifier_name)\n",
+    "    #plot_cap_curve(classifier, classifier_name)\n",
+    "    joblib.dump(classifier, 'models/' + classifier_name + '.pkl')\n",
     "    return classifier"
    ]
   },
@@ -685,25 +672,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "from sklearn.exceptions import DataConversionWarning\n",
-    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "estimators = [\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('knn', KNeighborsClassifier()),\n",
-    "]\n",
-    "pipeline = Pipeline(estimators)\n",
+    "    ('KNeighborsClassifier', KNeighborsClassifier()),\n",
+    "])\n",
     "classify_and_plot(pipeline)"
    ]
   },
@@ -717,11 +691,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "classify_and_plot(LogisticRegression(solver='liblinear'))"
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('LogisticRegression', LogisticRegression(solver='liblinear')),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -738,7 +718,11 @@
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "classify_and_plot(DecisionTreeClassifier())"
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('DecisionTreeClassifier', DecisionTreeClassifier()),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -754,17 +738,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "!{sys.executable} -m pip install --quiet pydotplus\n",
+    "'''#!{sys.executable} -m pip install --quiet pydotplus\n",
     "from sklearn.externals.six import StringIO  \n",
     "from sklearn.tree import export_graphviz\n",
     "import pydotplus\n",
     "\n",
     "dot_data = StringIO()\n",
-    "export_graphviz(_, out_file=dot_data, filled=True, rounded=True, special_characters=True)\n",
+    "export_graphviz(pipeline.steps[-1][1], out_file=dot_data, filled=True, rounded=True, special_characters=True)\n",
     "graph = pydotplus.graph_from_dot_data(dot_data.getvalue())  \n",
-    "graph.write_pdf(\"tree.pdf\")\n",
-    "'''"
+    "graph.write_pdf(\"models/tree.pdf\")'''"
    ]
   },
   {
@@ -781,7 +763,11 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "classify_and_plot(RandomForestClassifier(n_estimators=10))"
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('RandomForestClassifier', RandomForestClassifier(n_estimators=20)),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -798,7 +784,11 @@
    "outputs": [],
    "source": [
     "import xgboost as xkg\n",
-    "classify_and_plot(xkg.XGBClassifier(max_depth=100))"
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('XGBClassifier', xkg.XGBClassifier(max_depth=100)),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -817,7 +807,11 @@
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
-    "classify_and_plot(GaussianNB(priors=[0.75, 0.25]), full_data=False)"
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('GaussianNB_30', GaussianNB(priors=[0.75, 0.25])),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -826,7 +820,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classify_and_plot(GaussianNB(priors=[0.75, 0.25]), full_data=True)"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "pipeline = Pipeline([\n",
+    "    ('GaussianNB_80', GaussianNB(priors=[0.75, 0.25])),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('LinearSVC', LinearSVC(C=0.2)),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVC with Polynomial Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('SVC_poly', SVC(C=1.0, kernel='poly', gamma='scale')),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVC with Radial Basis Function Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "pipeline = Pipeline([\n",
+    "    ('select', feature_select),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('SVC_rbf', SVC(C=1.0, kernel='rbf', gamma='scale')),\n",
+    "])\n",
+    "classify_and_plot(pipeline)"
    ]
   },
   {
@@ -849,15 +920,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Activation\n",
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
-    "import tensorflow as tf\n",
-    "import keras_metrics\n",
-    "import h5py"
+    "import keras_metrics"
    ]
   },
   {
@@ -879,11 +946,11 @@
    "source": [
     "def create_model():\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(40, kernel_initializer='normal', activation='relu', input_dim=80))\n",
+    "    model.add(Dense(40, kernel_initializer='uniform', activation='relu', input_dim=X_train.shape[1]))\n",
     "    model.add(Dropout(rate=0.1))\n",
-    "    model.add(Dense(20, kernel_initializer='normal', activation='relu'))\n",
+    "    model.add(Dense(20, kernel_initializer='uniform', activation='relu'))\n",
     "    model.add(Dropout(rate=0.1))\n",
-    "    model.add(Dense(1, kernel_initializer='normal', activation='sigmoid'))\n",
+    "    model.add(Dense(1, kernel_initializer='uniform', activation='sigmoid'))\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\n",
     "        'accuracy', \n",
     "        #keras_metrics.precision(), \n",
@@ -893,25 +960,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "from sklearn.exceptions import DataConversionWarning\n",
-    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Features must be scaled by subtracting the mean and scaling to unit variance.\n",
     "\n",
-    "Absolute maximum of 100 training epochs, with 2 callbacks:\n",
-    "1. Monitor  accuracy on validation test set (val_acc), and stop training once it stops improving\n",
-    "2. Persist to disk the model state that yielded the best val_acc."
+    "Absolute maximum of 250 training epochs, with 2 callbacks:\n",
+    "1. Monitor loss on validation test set (val_loss), and stop training once it stops improving\n",
+    "2. Persist to disk the model state that yielded the best val_loss."
    ]
   },
   {
@@ -920,27 +976,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = ModelCheckpoint('models/best_model.hdf5', monitor='val_acc',\n",
+    "'''checkpoint = ModelCheckpoint('models/best_model.hdf5', monitor='val_acc',\n",
     "                             mode='max', verbose=0, save_best_only=True)\n",
     "early_stop = EarlyStopping(monitor='val_acc', patience=15, verbose=1, mode='max',\n",
+    "                          restore_best_weights=True)'''\n",
+    "\n",
+    "checkpoint = ModelCheckpoint('models/best_model.hdf5', monitor='val_loss',\n",
+    "                             mode='min', verbose=0, save_best_only=True)\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=50, verbose=1, mode='min',\n",
     "                          restore_best_weights=True)\n",
     "\n",
-    "estimators = [\n",
+    "pipeline = Pipeline([\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('mlp', KerasClassifier(build_fn=create_model, epochs=100, batch_size=5, verbose=1, \n",
+    "    ('KerasClassifier', KerasClassifier(build_fn=create_model, epochs=250, batch_size=5, verbose=1, \n",
     "                            callbacks=[checkpoint, early_stop], \n",
     "                            validation_data=(X_test, y_test==\">50K\"))),\n",
-    "]\n",
-    "pipeline = Pipeline(estimators)"
+    "])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "classify_and_plot(pipeline, full_data=True)"
+    "classify_and_plot(pipeline)"
    ]
   },
   {
