--- a/Census Income Prediction.ipynb
+++ b/Census Income Prediction.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sklearn"
+    "import pandas as pd"
    ]
   },
   {
@@ -18,9 +17,9 @@
    "outputs": [],
    "source": [
     "from sklearn.externals import joblib\n",
-    "trained_model = joblib.load('models/GaussianNB_full.pkl')\n",
-    "columns = joblib.load('models/columns.pkl')\n",
-    "feature_select = joblib.load('models/feature_select.pkl')"
+    "create_model=None\n",
+    "trained_model = joblib.load('models/XGBClassifier.pkl')\n",
+    "columns = joblib.load('models/columns.pkl')"
    ]
   },
   {
@@ -42,8 +41,7 @@
     "                                    'capital-gain':0,\n",
     "                                    'capital-loss':0,\n",
     "                                    'hours-per-week':40,\n",
-    "                                    'native-country':'Spain'}, index=[0]))\n",
-    "test"
+    "                                    'native-country':'Spain'}, index=[0]))"
    ]
   },
   {
@@ -52,18 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = test.reindex(columns=columns, fill_value=0)\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test = feature_select.transform(test)\n",
-    "#test"
+    "test = test.reindex(columns=columns, fill_value=0)"
    ]
   },
   {
@@ -74,6 +61,13 @@
    "source": [
     "trained_model.predict(test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
