Remove warnings when using KerasClassifier

--- a/Census Income Prediction.ipynb
+++ b/Census Income Prediction.ipynb
@@ -16,9 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "from sklearn.exceptions import DataConversionWarning\n",
+    "warnings.filterwarnings(action='ignore', category=DataConversionWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.externals import joblib\n",
     "create_model=None\n",
-    "trained_model = joblib.load('models/XGBClassifier.pkl')\n",
+    "trained_model = joblib.load('models/KerasClassifier.pkl')\n",
     "columns = joblib.load('models/columns.pkl')"
    ]
   },
